--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   ],
   "homepage": "https://adeshpandey.github.io/react-native-fancy-alert/",
   "devDependencies": {
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@types/react": "^18.0.26",
+    "@types/react-native": "^0.71.0"
   },
   "peerDependencies": {
     "react": "*",
@@ -29,9 +31,5 @@
   },
   "scripts": {
     "build": "rm -rf ./lib && tsc"
-  },
-  "dependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-native": "^0.71.0"
   }
 }
