--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   ],
   "homepage": "https://adeshpandey.github.io/react-native-fancy-alert/",
   "devDependencies": {
-    "typescript": "^4.9.4",
     "@types/react": "^18.0.26",
-    "@types/react-native": "^0.71.0"
+    "@types/react-native": "^0.71.0",
+    "jest": "^29.3.1",
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
     "react": "*",
